testdata/invalid/invalid_char_escape.pr
// Invalid escape sequence in char literal.
main() {
  Char c = '\x';
}
